fixing ws url, footer on mobile view

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -80,3 +80,14 @@
 	border-color: #333;
 }
 
+@media only screen and (max-width: 768px) {
+	#expander1 {
+		display: none;
+	}
+}
+
+//@media only screen and (min-width: 769px) {
+//	//#hostnames-select-mobile {
+//	//	display: none;
+//	//}
+//}
